<resources>
    <string name="app_name">Mesa news</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="logo">Logo</string>
    <string name="News">News</string>
    <string name="log_in_with_email">Sign in with email</string>
    <string name="dont_have_an_account_register">I don\'t have an account. Sign Up</string>
    <string name="toolbar_back">Toolbar back</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="invalid_name">Invalid name</string>
    <string name="signup_success">Registration completed</string>
    <string name="highlights">Highlights</string>
    <string name="latest_news">Latest news</string>
    <string name="title_favorites">Bookmarks</string>
</resources>